build-laptop/build.log
[ 20%] Built target TMR
[ 30%] Building CXX object dataflowProtection/CMakeFiles/DataflowProtection.dir/verification.cpp.o
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp: In function ‘llvm::Instruction* hasStoreUsage(llvm::Value*)’:
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:94:38: warning: unused variable ‘cmpUse’ [-Wunused-variable]
   94 |                         if (CmpInst* cmpUse = dyn_cast<CmpInst>(instUse)) {
      |                                      ^~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:101:46: warning: unused variable ‘callUse’ [-Wunused-variable]
  101 |                         } else if (CallInst* callUse = dyn_cast<CallInst>(instUse)) {
      |                                              ^~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:99:40: warning: unused variable ‘storeUse’ [-Wunused-variable]
   99 |                         if (StoreInst* storeUse = dyn_cast<StoreInst>(instUse)) {
      |                                        ^~~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp: In function ‘llvm::Instruction* isDereferenced(llvm::Instruction*, llvm::Instruction*)’:
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:131:46: warning: unused variable ‘callUse’ [-Wunused-variable]
  131 |                         } else if (CallInst* callUse = dyn_cast<CallInst>(instUse)) {
      |                                              ^~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:129:55: warning: unused variable ‘gepUse’ [-Wunused-variable]
  129 |                         } else if (GetElementPtrInst* gepUse = dyn_cast<GetElementPtrInst>(instUse)) {
      |                                                       ^~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:127:40: warning: unused variable ‘storeUse’ [-Wunused-variable]
  127 |                         if (StoreInst* storeUse = dyn_cast<StoreInst>(instUse)) {
      |                                        ^~~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp: In function ‘llvm::AllocaInst* findAllocaInst(llvm::Instruction*)’:
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:225:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘unsigned int’ [-Wsign-compare]
  225 |         for (int i = 0; i < inst->getNumOperands(); i++) {
      |                         ~~^~~~~~~~~~~~~~~~~~~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp: In member function ‘bool dataflowProtection::comesFromSingleCall(llvm::Instruction*)’:
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:328:27: warning: comparison of integer expressions of different signedness: ‘int’ and ‘unsigned int’ [-Wsign-compare]
  328 |         for (int i = 0; i < storeUse->getNumOperands(); i++) {
      |                         ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:333:69: error: ‘llvm::Intrinsic::ID’ is not a class, namespace, or enumeration
  333 |                         if (calledF->getIntrinsicID() != Intrinsic::ID::not_intrinsic) {
      |                                                                     ^~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp: In function ‘long int getCallArgIndex(llvm::Instruction*, llvm::CallInst*)’:
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:406:34: warning: unused variable ‘nextUse’ [-Wunused-variable]
  406 |                 if (Instruction* nextUse = dyn_cast<Instruction>(use)) {
      |                                  ^~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp: In member function ‘void dataflowProtection::verifyOptions(llvm::Module&)’:
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:756:25: error: ‘class llvm::ConstantExpr’ has no member named ‘isGEPWithNoNotionalOverIndexing’
  756 |                 if (CE->isGEPWithNoNotionalOverIndexing()) {
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:823:49: error: ‘class llvm::ConstantExpr’ has no member named ‘isGEPWithNoNotionalOverIndexing’
  823 |                                         if (CE->isGEPWithNoNotionalOverIndexing()) {
      |                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/m4x/Documents/Work/UA/coast/COAST/projects/dataflowProtection/verification.cpp:1005:36: warning: comparison of integer expressions of different signedness: ‘long int’ and ‘size_t’ {aka ‘long unsigned int’} [-Wsign-compare]
 1005 |                         if (argIdx >= calledFunction->arg_size()) {
      |                             ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [dataflowProtection/CMakeFiles/DataflowProtection.dir/build.make:132: dataflowProtection/CMakeFiles/DataflowProtection.dir/verification.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:228: dataflowProtection/CMakeFiles/DataflowProtection.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
